<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="info.jkjensen.criminalntent.CrimeFragment"
    android:paddingEnd="8dp"
    android:paddingRight="8dp"
    android:paddingStart="8dp"
    android:paddingLeft="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/crime_title_label"
        app:layout_constraintHorizontal_bias="0.024"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/crimeTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/crime_title_hint"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/crimeTitleEditText"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/crimeDateButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/crime_details_label"
        style="?android:listSeparatorTextViewStyle"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintVertical_bias="0.0"
        android:id="@+id/textView3" />

    <Button
        android:id="@+id/crimeDateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        app:layout_constraintTop_toBottomOf="@+id/crimeTitleEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <CheckBox
        android:id="@+id/crimeSolvedCheckbox"
        android:text="@string/crime_solved_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/crimeDateButton" />

    <Button
        android:id="@+id/deleteCrimeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="52dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/delete_crime" />

</android.support.constraint.ConstraintLayout>
